--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,8 +6,8 @@
 -->
 <html ng-app="app" >
     <head>
-    <!-- SERVERMOD  EasyMove-->
-    <base href="/EasyMove-maven/">
+    <!-- SERVERMOD  EasyMove-maven-->
+    <base href="/EasyMove-maven/"> 
     <!--<base href="/">-->
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -67,6 +67,7 @@
     <script src="app-services/authentication.service.js"></script>
     <script src="app-services/flash.service.js"></script>
     <script src="app-services/user.service.js"></script> 
+    <script src="app-services/account.service.js"></script> 
     <script src="app-services/route.service.js"></script> 
     <script src="app-services/gestione.service.js"></script>
     <script src="app-services/notifications.service.js"></script>
