--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -71,6 +71,7 @@
     <script src="app-services/route.service.js"></script> 
     <script src="app-services/gestione.service.js"></script>
     <script src="app-services/notifications.service.js"></script>
+    <script src="app-services/feedback.service.js"></script>
     <script src="app-services/maps.service.js"></script>
     <script src="app-services/localsaver.service.js"></script>
 
