--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,8 +6,8 @@
 -->
 <html ng-app="app" >
     <head>
-    <!-- SERVERMOD  EasyMove-maven-->
-    <base href="/EasyMove-maven/"> 
+    <!-- SERVERMOD  EasyMove-maven/-->
+    <base href="/"> 
     <!--<base href="/">-->
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
