--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -73,6 +73,8 @@
     <script src="app-services/notifications.service.js"></script>
     <script src="app-services/feedback.service.js"></script>
     <script src="app-services/maps.service.js"></script>
+    <script src="app-services/prenotation.service.js"></script>
+    <script src="app-services/car.service.js"></script>
     <script src="app-services/localsaver.service.js"></script>
 
 
