--- a/src/main/webapp/app-code/user/register/register.view.html
+++ b/src/main/webapp/app-code/user/register/register.view.html
@@ -37,7 +37,7 @@
                         <div class="f-row">
                             <md-input-container flex="50">
                                 <label>Password</label>
-                                <input ng-required ="true" name="password" ng-model="vm.user.psw" type="password" minlength="6" maxlength="20">
+                                <input ng-required ="true" name="password" ng-model="vm.user.password" type="password" minlength="6" maxlength="20">
                                 <div ng-messages="registerForm.password.$error" role="alert">
                                     <div ng-message-exp="['required', 'minlength', 'maxlength']">
                                         La tua password deve essere composta da almeno 6 caratteri e massimo 20.
