bug fix auto;relazione repository;angular version 1.5.0;aggiunto il tipo alla relazione e gestito nel front end

--- a/src/main/webapp/app-code/altreComponenti/footer.app.view.html
+++ b/src/main/webapp/app-code/altreComponenti/footer.app.view.html
@@ -1,31 +1,25 @@
-  <footer class="footer black" role="contentinfo">
+<footer style="width: 100%;color: #fff;padding-top: 33px;" role="contentinfo">
     <div class="wrap">
-      <div class="copy">
-        <nav role="navigation" class="foot-nav">
-          <ul>
-            <li style="
-    display: flex;
-"><a href="#" title="Home">Home</a></li>
-            <li style="
-    display: flex;
-"><a href="#" title="Blog">Blog</a></li>
-            <li style="
-    display: flex;
-"><a href="#" title="About us">About us</a></li>
-            <li style="
-    display: flex;
-"><a href="#" title="Contact us">Contact us</a></li>
-            <li style="
-    display: flex;
-"><a href="#" title="Terms of use">Terms of use</a></li>
-            <li style="
-    display: flex;
-"><a href="#" title="Help">Help</a></li>
-            <li style="
-    display: flex;
-"><a href="#" title="For partners">For partners</a></li>
-          </ul>
-        </nav>
-      </div>
+        <div class="copy">
+            <nav role="navigation" class="foot-nav">
+                <ul>
+                    <li style="
+                        display: flex;
+                        "><a href="home" title="Home">Home</a></li>
+                    <li style="
+                        display: flex;
+                        "><a href="http://leonardoruggeri.altervista.org/" title="About us">About us</a></li>
+                    <li style="
+                        display: flex;
+                        "><a href="mailto:leo94rug@gmail.com" title="Contact us">Contact us</a></li>
+                    <li style="
+                        display: flex;
+                        "><a href="#" title="Terms of use">Terms of use</a></li>
+                    <li style="
+                        display: flex;
+                        ">
+                </ul>
+            </nav>
+        </div>
     </div>
-  </footer>
+</footer>
