--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,8 +7,8 @@
 <html ng-app="app" >
     <head>
     <!-- SERVERMOD  EasyMove-maven/-->
-    <!--<base href="/EasyMove-maven/"> -->
-    <base href="/">
+    <base href="/EasyMove-maven/"> 
+    <!--<base href="/">-->
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -29,7 +29,7 @@
       <link href='http://fonts.googleapis.com/css?family=Raleway:400,500,600,700|Montserrat:400,700' rel='stylesheet' type='text/css'>
       <link rel="shortcut icon" href="images/favicon.ico" />
 
-      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDKtwMDUkfiYjuFYWoMpUbELOymjSVeOxw&libraries=places"></script>
@@ -76,6 +76,7 @@
     <script src="app-services/prenotation.service.js"></script>
     <script src="app-services/car.service.js"></script>
     <script src="app-services/localsaver.service.js"></script>
+    <script src="app-services/date.service.js"></script>
 
 
 <!--      CONTROLLER      --> 
