--- a/src/main/webapp/app-code/user/prenotation/prenotation.view.html
+++ b/src/main/webapp/app-code/user/prenotation/prenotation.view.html
@@ -50,7 +50,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div ng-if="vm.amicizia === 1">
+                            <div ng-if="vm.amicizia === 2">
 
                                 <md-button class="md-primary md-raised" style="width: 200px;height: 0px;" ng-click="vm.showAlert($event)">
                                     <p>Visualiazza numero</p>
@@ -68,7 +68,7 @@
                         <md-card-title-media >
                             <div class="md-media-lg card-media aaa" >
                                 <p class="aaa"><b>Nome:</b> {{vm.utenteProfilo.nome}}</p>
-                                <div ng-if="vm.amicizia === 1 || vm.amicizia === 2">
+                                <div ng-if="vm.amicizia === 2 || vm.amicizia === 3">
                                     <p class="aaa"><b>Cognome:</b> {{vm.utenteProfilo.cognome}}</p>
                                 </div>
                                 <p class="aaa"><b>Età:</b> {{vm.utenteProfilo.eta}}</p>
@@ -84,11 +84,11 @@
                     </md-card-actions>
                 </md-card>
                 <div ng-if="vm.amicizia === 0">
-                    <md-button ng-disabled=vm.disabled class="md-primary md-raised" ng-click="vm.richiestaAmicizia($event)"  >
+                    <md-button ng-disabled=vm.disabled_amicizia class="md-primary md-raised" ng-click="vm.richiestaAmicizia($event)"  >
                         PRENOTA
                     </md-button>
                 </div>
-                <div ng-if="vm.amicizia === 1">
+                <div ng-if="vm.amicizia === 2">
                     <form ng-submit="vm.prenota()" role="form" name="offer" ng-cloak>
                         <md-input-container>
                             <md-select ng-model="vm.posti" required name="sub" placeholder="Posti">
@@ -99,7 +99,7 @@
                             <div class="errors" ng-messages="offer.sub.$error">
                                 <div ng-message="required">Indica i posti che vuoi prenotare</div>
                             </div>                        <h5>Seleziona il numero di posti che vuoi bloccare e clicca su prenota</h5>
-                            <md-button ng-disabled=vm.disabled class="md-primary md-raised" type="submit"  >
+                            <md-button ng-disabled=vm.disabled_prenotazione class="md-primary md-raised" type="submit"  >
                                 PRENOTA
                             </md-button>   
                         </md-input-container>
