bug fix sidebar;

--- a/src/main/webapp/app-code/user/offer1/offer1.view.html
+++ b/src/main/webapp/app-code/user/offer1/offer1.view.html
@@ -107,7 +107,7 @@
                         </md-content>
                     </div>
 
-                    <input type="submit" class="btn medium color right"></input>
+                    <input type="submit" value="Prosegui" class="btn medium color right"></input>
                 </form>
             </div>
         </div>
