--- a/src/main/webapp/app-code/user/search/search.view.html
+++ b/src/main/webapp/app-code/user/search/search.view.html
@@ -70,7 +70,7 @@
                                             </div>
                                             <!--<md-divider class="vertical-divider" style="width: 63%;"></md-divider>-->
                                             <div class="md-list-item-text" style="text-align: left;margin-left: 30px;">
-                                                <h3>{{route.tratta_auto.prezzo}}</h3>
+                                                <h3>{{route.tratta_auto.prezzo}} €</h3>
                                                 <h4><b>Posti:</b> {{route.tratta_auto.posti}}</h4>
                                                 <h4><b>Auto:</b> {{route.auto}}</h4>
                                             </div>
