--- a/src/main/webapp/app-code/user/personal_bacheca/personal_bacheca.app.view.html
+++ b/src/main/webapp/app-code/user/personal_bacheca/personal_bacheca.app.view.html
@@ -8,14 +8,14 @@
             <!--- //Sidebar -->
             <div class="three-fourth content">
                 <div id="titolo_pp" class="options-block" style="background: #fff;box-shadow: inset 0 0 0 1px #DFDFD0;">
-                    <div id="immagine_p" >
-                    <img ng-src="{{vm.user.foto_utente}}" style="border-radius: 100px;max-height: 105px;margin: 1px;max-width: 114px;" >
+                    <div id="immagine_p">
+                        <img ng-src="{{vm.user.foto_utente}}" style="border-radius: 100px;max-height: 105px;margin: 1px;max-width: 114px;">
 
-                    <!--<div> {{vm.user.utente.foto_utente}}</div>-->
+                        <!--<div> {{vm.user.utente.foto_utente}}</div>-->
                     </div>
                     <div id="nome_p" class="textProfileInPhone" ng-if="vm.user.sesso==='male'">
                         Bentornato!
-                    </div>                    
+                    </div>
                     <div id="nome_p" class="textProfileInPhone" ng-if="vm.user.sesso==='female'">
                         Bentornata!
                     </div>
@@ -28,40 +28,44 @@
                         <md-list>
                             <md-list-item class="md-3-line box options-block" ng-repeat="item in vm.notifiche" style="margin-bottom: 10px;padding: 0px;">
                                 <div class="flex-container-bacheca">
-                                  <div class="flex-item item1">
-                                    <img data-ng-src="{{item.foto_utente}}" style="height: 70%;border-radius: 50%;">
-                                  </div>
-                                  <div class="flex-item item2 flex-container-ins">
-                                    <div class="flex-item-ins item1-ins">
-                                      <div class="flex-item-ins-ins">
-                                        <div>{{item.titolo}} da {{item.nome_mittente}} <div ng-if="item.tipologia!=1">per il viaggio {{item.nome_viaggio}} </div></div>
-                                      </div>      
-                                      <div class="flex-item-ins-ins">
-                                        <div>
-                                            <img ng-click="vm.removeNotification(item.id)" ng-src="images/close.png" class="grandezza_img">
-                                        </div>
-                                      </div>
-                                    </div>      
-                                    <div class="flex-item-ins item2-ins">
-                                        Messaggio: {{item.messaggio}}
-                                    </div>      
-                                    <div class="flex-item-ins item3-ins">
-                                      <div class="flex-item-ins-ins bottoni">
-                                        <md-button ng-if="item.bottone_1!=undefined" ng-click="vm.bottone1(item,$event)" class="centra md-raised">{{item.bottone_1}}</md-button>
-                                      </div>      
-                                      <div class="flex-item-ins-ins bottoni">
-                                        <md-button ng-if="item.bottone_2!=undefined" ng-click="vm.bottone2(item)" class="centra md-raised">{{item.bottone_2}}</md-button>
-                                      </div>
-                                    </div>    
-                                    <div class="flex-item-ins item4-ins">
-                                      Inviato il {{item.data | date : "H:mm - d/M/y"}}
+                                    <div class="flex-item item1">
+                                        <a ng-href="profilo-utenti/{{item.id_utente}}">
+                                            <img data-ng-src="{{item.foto_utente}}" style="height: 70%;border-radius: 50%;">
+                                        </a>
                                     </div>
-                                  </div>
+                                    <div class="flex-item item2 flex-container-ins">
+                                        <div class="flex-item-ins item1-ins">
+                                            <div class="flex-item-ins-ins">
+                                                <div>{{item.titolo}} da {{item.nome_mittente}}
+                                                    <div ng-if="item.tipologia!=1">per il viaggio {{item.nome_viaggio}} </div>
+                                                </div>
+                                            </div>
+                                            <div class="flex-item-ins-ins">
+                                                <div>
+                                                    <img ng-click="vm.removeNotification(item.id)" ng-src="images/close.png" class="grandezza_img">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="flex-item-ins item2-ins">
+                                            Messaggio: {{item.messaggio}}
+                                        </div>
+                                        <div class="flex-item-ins item3-ins">
+                                            <div class="flex-item-ins-ins bottoni">
+                                                <md-button ng-if="item.bottone_1!=undefined" ng-click="vm.bottone1(item,$event)" class="centra md-raised">{{item.bottone_1}}</md-button>
+                                            </div>
+                                            <div class="flex-item-ins-ins bottoni">
+                                                <md-button ng-if="item.bottone_2!=undefined" ng-click="vm.bottone2(item)" class="centra md-raised">{{item.bottone_2}}</md-button>
+                                            </div>
+                                        </div>
+                                        <div class="flex-item-ins item4-ins">
+                                            Inviato il {{item.data | date : "H:mm - d/M/y"}}
+                                        </div>
+                                    </div>
                                 </div>
                             </md-list-item>
                         </md-list>
                     </md-content>
-<!--
+                    <!--
                     <md-content style="background-color: inherit;">
                         <md-list>
                             <md-list-item class="md-3-line" ng-repeat="item in vm.notifiche.notifichelist" style="margin-bottom: 10px;">
@@ -173,9 +177,9 @@
                         </md-list>
                     </md-content>
                 </div>-->
-            </div>        
+                </div>
+            </div>
         </div>
-    </div>
 </main>
 <!-- //Main -->
 <foo-ter></foo-ter>
