--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,8 +7,8 @@
 <html ng-app="app" >
     <head>
     <!-- SERVERMOD  EasyMove-maven/-->
-    <base href="/EasyMove-maven/"> 
-    <!--<base href="/">-->
+    <!--<base href="/EasyMove-maven/">--> 
+    <base href="/">
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
