--- a/src/main/webapp/app-code/user/travel_detail/travel_detail.view.html
+++ b/src/main/webapp/app-code/user/travel_detail/travel_detail.view.html
@@ -136,7 +136,7 @@
                                     flex-direction: column;
                                     ">
                                     <div style="-webkit-flex: 1;flex: 1;">
-                                        <p style="padding: 0px !important; ">Feedback inserito da: {{feed.anagrafica.nome}} il {{feed.feedback.data | date : "d.M.y"}}</p>
+                                        <p style="padding: 0px !important; ">Feedback inserito da: {{feed.anagrafica.nome}} il {{feed.feedback.date | date : "d.M.y"}}</p>
                                     </div>
                                     <div style="-webkit-flex: 1;flex: 1;">
                                         <i>{{feed.feedback.testo}}</i>
