--- a/src/main/webapp/app-code/user/personal_bacheca/personal_bacheca.app.view.html
+++ b/src/main/webapp/app-code/user/personal_bacheca/personal_bacheca.app.view.html
@@ -37,7 +37,7 @@
                                         <div class="flex-item-ins item1-ins">
                                             <div class="flex-item-ins-ins">
                                                 <div>{{item.titolo}} da {{item.nome_mittente}}
-                                                    <div ng-if="item.tipologia!=1">per il viaggio {{item.nome_viaggio}} </div>
+                                                    <div ng-if="item.tipologia!==1">per il viaggio {{item.nome_viaggio}} </div>
                                                 </div>
                                             </div>
                                             <div class="flex-item-ins-ins">
