--- a/src/main/webapp/app-code/user/prenotation/prenotation.view.html
+++ b/src/main/webapp/app-code/user/prenotation/prenotation.view.html
@@ -165,7 +165,7 @@
                                      flex-direction: column;
                                      ">
                                     <div style="-webkit-flex: 1;flex: 1;">
-                                        <p style="padding: 0px !important; ">Feedback inserito da: {{feed.utente.nome}} il {{feed.dateString| date : "d.M.y"}}</p>
+                                        <p style="padding: 0px !important; ">Feedback inserito da: {{feed.utente.nome}} il {{feed.date| date : "d.M.y"}}</p>
                                     </div>
                                     <div style="-webkit-flex: 1;flex: 1;">
                                         <i>{{feed.testo}}</i>
